tests/ui/diagnostic-width/flag-human.ascii.stderr
error[E0308]: mismatched types
  --> $DIR/flag-human.rs:9:17
   |
LL | ..._: () = 42;
   |       --   ^^ expected `()`, found integer
   |       |
   |       expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
